--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,14 @@
-body {
-    font-family: 'Poppins', sans-serif;
+.material-symbols-outlined {
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 60
 }
 
+body {
+    font-family: 'Poppins', sans-serif;
+}    
+
 [x-cloak] { display: none !important; }
+
